@@ -112,12 +112,6 @@ Adjust the amount of bloom.
 \fB\-\-bloom\-intensity FLOAT\fR
 Adjust the intensity of the bloom.
 .TP
-\fB\-\-disable\-progress\fR
-Disable progress bar.
-.TP
-\fB\-\-disable\-bloom\fR
-Disable bloom effect.
-.TP
 \fB\-\-max\-files\fR
 Set the maximum number of files. Excess files will be discarded.
 .TP
@@ -137,7 +131,7 @@ Change scale of users.
 Camera mode (overview,track).
 .TP
 \fB\-\-hide DISPLAY_ELEMENT\fR
-Hide display element (date,users,files,tree,usernames,filenames,dirnames).
+Hide display element (bloom,date,dirnames,files,filenames,mouse,progress,tree,users,usernames).
 
 Separate multiple elements with commas.
 .TP
